test/success/protocol/simple_generic/main.sk
module Main {

struct Foo {

}

protocol Bar[T] {
    fn bar(&self) -> ()
}

impl Foo Bar[Foo] {
    fn bar(&self) -> () {

    }
}

fn generic[T: Bar[T]](t: T) {
    t.bar();
}

fn main() {
    let f = Foo();
    f.bar();
    generic(f);
}

}