test/errors/traits/ambiguous_instances/main.sk
module Main {

struct Foo {

}

protocol Bar[T] {
    fn bar(self) -> ()
}

impl[T] BarImpl Bar[T] {
    fn bar(self) -> () {

    }
}

impl[Q] BarImpl2 Bar[Q] {
    fn bar(self) -> () {

    }
}

fn main() {
    let f = Foo();
    f.bar();
}

}